# solocoder-5476-rust-ratelimit

./: Cargo.toml  NEXT_PROMPT_R1.txt  NEXT_PROMPT_R3.txt  build.rs  config.yaml
proto/: ratelimit.proto
src/: alert.rs  key_extractor.rs  main.rs  metrics.rs
src/algorithm/: fixed_window.rs  mod.rs  sliding_window.rs  token_bucket.rs
src/api/: grpc.rs  handlers.rs  matcher.rs  mod.rs
src/config/: manager.rs  mod.rs  rule.rs  templates.rs
src/store/: memory.rs  mod.rs  redis_store.rs
static/admin/: index.html
