[package]
name = "ratelimit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_with = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
notify = "6"
parking_lot = "0.12"
dashmap = "5"
redis = { version = "0.24", features = ["tokio-comp", "aio"], optional = true }
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
prometheus = { version = "0.13", features = ["process"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonpath-rust = "0.3"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
mime_guess = "2"

[build-dependencies]
tonic-build = { version = "0.11", optional = true }

[features]
default = ["redis-store"]
redis-store = ["dep:redis"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build", "dep:tokio-stream"]
